<resources>
    <string name="app_name">TarangPlus</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">HOME</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notification Settings</string>
    <string name="search">SEARCH</string>
    <string name="search_hint">Search for movies, songs &amp; more…</string>
    <string name="title_tv">TV</string>
    <string name="title_me">ME</string>
    <string name="facebook_app_id">1304591476382466</string>
    <string name="fb_login_protocol_scheme">fb1304591476382466</string>
    <string name="facebook_client_token">d7d5bfa5dab556c81c8a0b1a2547bc9b</string>
    <string name="language">Language</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="premium">PREMIUM</string>
    <string name="content_des">dec</string>
    <string name="transaction_failed_header">Transaction Failed</string>
    <string name="transaction_failed_message">Your payment of Rs 50 could not be processed\nHere are transaction details</string>
    <string name="transaction_failed_reason_message">Reason: System is currently unavailable (Error:204)</string>
    <string name="trasaction_id">Transaction ID\n 123456</string>
    <string name="try_again">Try Again</string>
    <string name="cancel">Cancel</string>
    <string name="continue_browsing">Continue Browsing</string>
    <string name="transaction_success_message">Your payment of R59 has been processed. \n Here are transaction details</string>
    <string name="transaction_success_header">Transaction Success</string>
    <string name="combo_offer_dialog">Combo offer dialog</string>
    <string name="premier">Premium</string>
    <string name="preview">Preview</string>
    <string name="trailer">Trailer</string>
    <string name="watch_later">Watch later</string>
    <string name="favorite">Favourite</string>
    <string name="Playlist">Playlist</string>
    <string name="share">Share</string>
    <string name="more_in_comedy">All Related Videos</string>
    <string name="starring">Starring</string>
    <string name="directed">Directed By</string>
    <string name="all_episodes">All Episodes</string>
    <string name="load_more">Load More</string>
    <string name="others">Others classic shows</string>
    <string name="playing_next">Playing Next</string>
    <string name="recent_search">Recent Search</string>
    <string name="clear">Clear</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_pwd">FORGOT PASSWORD ?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="nav_home">HOME</string>
    <string name="not_a_member">Not a member?</string>
    <string name="register">REGISTER</string>
    <string name="register_header">Register</string>
    <string name="confirm">CONFIRM</string>
    <string name="forgot_sample_text">To reset your password, enter your registered mobile number</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">RESET</string>
    <string name="name">Name</string>
    <string name="who_is_watching_txt">Add a new profile to your TarangPlus world account</string>
    <string name="proceed">PROCEED</string>
    <string name="who_is_watching_header">Who\'s Watching</string>
    <string name="terms_me_text">Terms Of Use</string>
    <string name="privacy_me_policy">Privacy Policy</string>
    <string name="contact_me_us">Contact Us</string>
    <string name="terms_text">I agree to the <![CDATA[<b><font color=#069BB2>TERMS OF USE</font></b>]]> and </string>
    <string name="privacy_policy"><![CDATA[<b><font color=#069BB2> PRIVACY POLICY</font></b>]]></string>
    <string name="font_sans_black">OpenSans-Regular.ttf</string>
    <string name="font_sans_extra_bold">OpenSans-Bold.ttf</string>
    <string name="font_sans_bold">OpenSans-Bold.ttf</string>
    <string name="font_sans_medium">OpenSans-SemiBold.ttf</string>
    <string name="font_sans_extra_light">OpenSans-Light.ttf</string>
    <string name="font_sans_light">OpenSans-Light.ttf</string>
    <string name="font_sans_regular">OpenSans-Regular.ttf</string>
    <string name="font_sans_semi_bold">OpenSans-SemiBold.ttf</string>
    <string name="font_sans_thin">OpenSans-Light.ttf</string>
    <string name="otp_screen_txt">Enter the OTP sent to your mobile number via SMS</string>
    <string name="did_not_recieve">Didn\'t receive the OTP ?</string>
    <string name="resend">RESEND</string>
    <string name="verify">VERIFY</string>
    <string name="nav_me">ME</string>
    <string name="nav_tv">TV</string>
    <string name="nav_search">SEARCH</string>
    <string name="lorem">Lorem ipsum</string>
    <string name="image_content">Image content description</string>
    <string name="email_id">Email</string>
    <string name="mobile_number_empty">This field is mandatory</string>
    <string name="indian_password_empty">Invalid credentials</string>
    <string name="email_id_empty">This field is mandatory</string>
    <string name="invalid_email">Please enter your registered email address</string>
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="registered_email_or_password_empty">Email or Mobile is empty</string>
    <string name="already_mobile_registered">This number is already registered</string>
    <string name="already_email_registered">This email is already registered</string>
    <string name="password_short">Minimum length of 6 characters is mandatory</string>
    <string name="save">SAVE</string>
    <string name="change_picture">CHANGE PICTURE</string>
    <string name="delete_profile">DELETE THIS PROFILE</string>
    <string name="profile_name">Profile Name</string>
    <string name="kids">Kid Profile</string>
    <string name="some_thing_went_wrong">Oops! Something went wrong</string>
    <string name="please_check_internt">Please check your internet connection</string>
    <string name="password_empty">Pasword is empty</string>
    <string name="confirm_password_empty">Confirm password is empty</string>
    <string name="password_confirm_password_not_matching">Passwords do not match</string>
    <string name="password_do_not_match">Passwords do not match</string>
    <string name="wrong_pin">Wrong OTP</string>
    <string name="pin_empty">Empty PIN</string>
    <string name="name_empty">Name is empty</string>
    <string name="view_plan">View Plans</string>
    <string name="help">FAQ</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_verified">OTP is Verified</string>
    <string name="please_accept_terms_and_conditions">Please accept terms and conditions</string>
    <string name="is_field_empty">This field is mandatory</string>
    <string name="no_data_found">No data found</string>
    <string name="account_details">Account Details</string>
    <string name="watch_list">Watchlist</string>
    <string name="reminderes">Reminders</string>
    <string name="manage_payment">Manage Payments</string>
    <string name="refer_freind">Refer friend</string>
    <string name="manage">Manage</string>
    <string name="no_data_found_txt">Currently, there are no videos</string>
    <string name="sorry_txt">Sorry!</string>
    <string name="go_back_txt">Go Back</string>
    <string name="manage_profiles">Account Details</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="watch_when_you_want">Create your list now!</string>
    <string name="no_watchlater_txt">Add movies, shows and songs to your Watchlist by pressing the \'BROWSE\' button.</string>
    <string name="no_favourite_txt">Add movies, shows and songs to your Favourite by pressing the \'BROWSE\' button.</string>
    <string name="no_playlist_txt">Add movies, shows and songs to your Playlist by pressing the \'BROWSE\' button.</string>
    <string name="browse_shemaro">Browse</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="mobile">Mobile</string>
    <string name="comming_soon">Coming soon</string>
    <string name="please_enter_valid_number">Please enter your 10 digit mobile number</string>
    <string name="subscription_message">To continue watching, with unlimited and ad free access to premium videos, subscribe now</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="login_now">Login Now</string>
    <string name="login_message">Please login to watch this video</string>
    <string name="subscribe">Subscribe</string>
    <string name="other_message">Already Subscribed?</string>
    <string name="_0">0</string>
    <string name="logout">Logout</string>
    <string name="no_country_dec">Oops something went wrong please restart app!</string>
    <string name="please_check">We could not find what you searched for.\nPlease check the spelling or try another term.</string>
    <string name="sorry_txt_for_search">No Results found!</string>
    <string name="app_version_str">TarangPlus - Version</string>
    <string name="other_channels">Other Channels</string>
    <string name="all_channels">All Channels</string>
    <string name="exit_alert">Tap again to exit the App</string>
    <string name="add">ADD</string>
    <string name="update">update</string>
    <string name="personal_details">Your Details</string>
    <string name="date_of_birth">Birth Date</string>
    <string name="security_details">Security Details</string>
    <string name="change">change</string>
    <string name="done">done</string>
    <string name="update_personal_details">Update Personal Details</string>
    <string name="device_settings">Device Settings</string>
    <string name="streaming">Streaming</string>
    <string name="registered_status">Registered Status</string>
    <string name="notifications">Notifications</string>
    <string name="clear_watch_history">Clear Watch History</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="parental_control">Parental Control</string>
    <string name="settings">Settings</string>
    <string name="watch_history_warning">Are you sure you want to clear your watch history? Your watch history helps us give you better recommendations.</string>
    <string name="watch_history_message">Your watch history is cleared</string>
    <string name="enter_your_password">Enter your TarangPlus password</string>
    <string name="continue_me">CONTINUE</string>
    <string name="pin_change">Change PIN</string>
    <string name="refer_friend_message">Now refer your friends to join TarangPlus and earn reward for each referral</string>
    <string name="love_shemaroo">Love TarangPlus</string>
    <string name="invite">Invite</string>
    <string name="refer_a_freind">Refer a Friend</string>
    <string name="pin_forgot">Forgot Pin?</string>
    <string name="message">Please enter your 4 digit Parental Control PIN to access this user profile</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="password_change_success">Password  successfully changed</string>
    <string name="password_change_error">Error changing password. Please try again later</string>
    <string name="warning_title">Clear Watch History</string>
    <string name="not_logged_in_txt">Please login to purchase the plan please login.</string>
    <string name="no">No</string>
    <string name="congratulations">Congratulations!</string>
    <string name="country">Pick Country</string>
</resources>