<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/px_8"
    android:paddingStart="@dimen/px_20"
    android:paddingTop="@dimen/px_20"
    android:paddingEnd="@dimen/px_20"
    android:paddingBottom="@dimen/px_10">

    <com.otl.tarangplus.customeUI.MyTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/congratulations"
        android:textColor="@color/black"
        android:textSize="@dimen/pt_20"
        android:visibility="visible"
        app:fontName="@string/font_sans_semi_bold"
        tools:visibility="@string/warning_title" />

    <ImageView
        android:id="@+id/suc_img"
        android:layout_width="@dimen/px_123"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/px_31"
        android:adjustViewBounds="true"
        android:src="@drawable/success_img"
         />

    <com.otl.tarangplus.customeUI.MyTextView
        android:id="@+id/txt_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/suc_img"
        android:layout_marginTop="@dimen/px_29"
        android:gravity="center"
        android:textColor="@color/txt_grey_66"
        android:textSize="@dimen/pt_14"
        app:fontName="@string/font_sans_regular"
        tools:text="@string/watch_history_warning" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_des"
        android:layout_marginTop="@dimen/px_20"
        android:gravity="center"
        android:orientation="horizontal">

        <com.otl.tarangplus.customeUI.GradientTextView
            android:id="@+id/cancel"
            style="@style/rounded_grey_btn"
            android:layout_margin="@dimen/px_8"
            android:text="@string/no"
            android:visibility="gone" />

        <com.otl.tarangplus.customeUI.GradientTextView
            android:id="@+id/confirm"
            style="@style/rounded_gradient_btn"
            android:layout_margin="@dimen/px_8"
            android:text="@string/proceed" />
    </LinearLayout>
</RelativeLayout>