<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/px_20"
    android:background="@drawable/gradient_shade">

    <com.otl.tarangplus.customeUI.MyTextView
        android:id="@+id/popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/pt_16"
        app:fontName="@string/font_sans_semi_bold" />

    <com.otl.tarangplus.customeUI.MyTextView
        android:id="@+id/popup_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_20"
        android:textColor="@color/black"
        android:textSize="@dimen/pt_12"
        app:fontName="@string/font_sans_regular"
        android:text="@string/not_logged_in_txt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_28"
        android:gravity="center"
        android:orientation="horizontal">

        <com.otl.tarangplus.customeUI.GradientTextView
            android:id="@+id/popup_negetive_button"
            style="@style/rounded_gradient_btn"
            android:layout_marginTop="@dimen/px_0"
            android:background="@drawable/rounded_btn_corner_unselected"
            app:endcolor="@color/txt_grey"
            app:startcolor="@color/txt_grey"
            android:text="@string/cancel" />

        <com.otl.tarangplus.customeUI.GradientTextView
            android:id="@+id/popup_positive_button"
            style="@style/rounded_gradient_btn"
            android:layout_marginStart="@dimen/px_10"
            android:layout_marginTop="@dimen/px_0"
            android:text="@string/proceed" />
    </LinearLayout>


</LinearLayout>