<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar_layout"
        layout="@layout/normal_toolbar" />


    <com.otl.tarangplus.customeUI.GradientTextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/px_40"
        android:layout_marginTop="@dimen/px_28"
        android:layout_marginEnd="@dimen/px_40"
        android:gravity="center"
        android:text="@string/enter_your_password"
        android:textColor="@color/txt_grey_66"
        android:textSize="@dimen/pt_12"
        app:fontsName="@string/font_sans_regular" />

    <com.otl.tarangplus.customeUI.MyTextHintView
        android:id="@+id/password_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/px_40"
        android:layout_marginTop="@dimen/px_28"
        android:layout_marginEnd="@dimen/px_40"
        android:hint="@string/password"
        app:fontName="@string/font_sans_regular"
        app:hintTextAppearance="@style/text_input_layout"
        app:passwordToggleDrawable="@drawable/password_eye_selector"
        app:passwordToggleEnabled="true">

        <com.otl.tarangplus.customeUI.MyEditText
            android:id="@+id/me_edit_txt"
            style="@style/me_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@color/transparent"
            android:drawablePadding="@dimen/px_0"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/px_neg_password" />

    </com.otl.tarangplus.customeUI.MyTextHintView>

    <com.otl.tarangplus.customeUI.GradientTextView
        android:id="@+id/forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/px_28"
        android:gravity="center"
        android:text="@string/forgot_pwd"
        android:textColor="@color/color_forgot_pwd"
        android:textSize="@dimen/pt_11"
        android:visibility="gone"
        app:fontsName="@string/font_sans_semi_bold" />

    <com.otl.tarangplus.customeUI.GradientTextView
        android:id="@+id/continue_to_parent"
        style="@style/rounded_gradient_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/px_28"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/continue_me"
        android:textColor="@color/gradient_1" />
</LinearLayout>