<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.otl.tarangplus.customeUI.MyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/transaction_success_header"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_account_details" />

    <com.otl.tarangplus.customeUI.MyTextView
        android:id="@+id/failed_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/transaction_success_message"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <com.otl.tarangplus.customeUI.MyTextView
        android:id="@+id/transaction_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/trasaction_id"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <com.otl.tarangplus.customeUI.MyTextView
        android:id="@+id/continue_browsing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/continue_browsing"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <com.otl.tarangplus.customeUI.MyTextView
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@android:color/black"
        android:textSize="18sp" />
</LinearLayout>