<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.otl.tarangplus.customeUI.GradientTextView
        android:id="@+id/key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_15"
        android:layout_marginBottom="@dimen/px_3"
        android:text="@string/account_details"
        android:textColor="@color/black"
        android:textSize="@dimen/pt_12"
        app:fontsName="@string/font_sans_bold" />

    <com.otl.tarangplus.customeUI.GradientTextView
        android:id="@+id/value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/px_0"
        android:lineSpacingExtra="@dimen/px_3"
        android:maxLines="2"
        android:textColor="@color/txt_grey_66"
        android:textSize="@dimen/pt_12"
        app:fontsName="@string/font_sans_regular"
        tools:text="Value" />
</LinearLayout>