<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/px_20"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp">

    <com.otl.tarangplus.customeUI.MyEditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/font_sans_regular"
        >

    </com.otl.tarangplus.customeUI.MyEditText>

    <com.otl.tarangplus.customeUI.MyTextView
        android:id="@+id/popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/country"
        android:textColor="@color/black"
        android:textSize="@dimen/pt_16"
        app:fontName="@string/font_sans_semi_bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />


</LinearLayout>